Update and rename thyme_aosp_a15.env to alioth_aosp_a15.env

--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -1,4 +1,4 @@
-CONFIG_ENV=Profiles/thyme_aosp_a15.env
+CONFIG_ENV=Profiles/alioth_aosp_a15.env
 
 DEVICE_NAME=xiaomi_10s
 DEVICE_CODENAME=thyme
@@ -18,13 +18,13 @@ GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_a
 GCC_32_BRANCH=lineage-19.1
 
 DEFCONFIG_SOURCE=
-DEFCONFIG_NAME=thyme_defconfig
+DEFCONFIG_NAME=alioth_defconfig
 
 KERNELSU_SOURCE=https://raw.githubusercontent.com/rsuntk/KernelSU/refs/heads/main/kernel/setup.sh
 KERNELSU_BRANCH=susfs-v1.5.5
 KERNELSU_NAME=KernelSU
 
-SUSFS_ENABLE=true
+SUSFS_ENABLE=false
 SUSFS_FIXED=false
 
 AK3_SOURCE=https://github.com/osm0sis/AnyKernel3.git
