--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -6,8 +6,8 @@ DEVICE_CODENAME=alioth
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
 
-KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_n0.git
-KERNEL_BRANCH=noksu
+KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_magictime
+KERNEL_BRANCH=magictime-new
 CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20241222-release/Clang-20.0.0git-20241222.tar.gz
 CLANG_BRANCH=
 
