--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,18 +22,8 @@ on:
         required: true
         type: boolean
         default: true
-      build_kernel_mi10s_aosp_a15:
-        description: "Build Kernel Xiaomi 10S (Based-AOSP Android 15)?"
-        required: true
-        type: boolean
-        default: true
       build_kernel_op8_nameless15_a15:
         description: "Build Kernel OnePlus 8 (Nameless 15)?"
-        required: true
-        type: boolean
-        default: true
-      make_release:
-        description: "Do you want to create a release?"
         required: true
         type: boolean
         default: true
@@ -47,10 +37,6 @@ jobs:
     uses: ./.github/workflows/build_kernel_mix2s_evox_a15.yml
     secrets: inherit
     if: ${{ inputs.build_kernel_mix2s_evox_a15 }}
-  build_kernel_mi10s_aosp_a15:
-    uses: ./.github/workflows/build_kernel_mi10s_aosp_a15.yml
-    secrets: inherit
-    if: ${{ inputs.build_kernel_mi10s_aosp_a15 }}
   build_kernel_op8_nameless15_a15:
     uses: ./.github/workflows/build_kernel_op8_nameless15_a15.yml
     secrets: inherit
@@ -62,7 +48,6 @@ jobs:
       - build_kernel_op8_oos131_a13
       - build_kernel_k20p_aosp_a15
       - build_kernel_mix2s_evox_a15
-      - build_kernel_blackshark4_miui_a11
       - build_kernel_mi10s_aosp_a15
     if: ${{ inputs.make_release }}
     env:
@@ -79,9 +64,7 @@ jobs:
         | OnePlus 8 (All) | instantnoodle | 4.19 | Nameless 15 | 15 | AnyKernel3 | rsuntk | ✅ | ❌ | ❌ |
         | Xiaomi MIX2S (CN) | polaris | 4.9 | Evolution X 10.2.1 | 15 | Boot Image | SukiSU | ✅ | ❌ | ❌ |
         | Redmi K20 Pro (CN) | raphael | 4.14 | Based-AOSP | 15 | AnyKernel3 | rsuntk | ✅ | ❌ | ❌ |
-        | Black Shark 4 | penrose | 4.19 | MIUI/JoyUI 12 | 11 | AnyKernel3 | rsuntk | ❌ | ❌ | ✅ |
-        | Xiaomi 10S | thyme | 4.19 | Based-AOSP | 15 | AnyKernel3 | rsuntk | ✅ | ❌ | ❌ |
-        | Samsung S20 5G | x1q | 4.19 | OneUI 5.1/6.1 | 13/14 | Boot Image | rsuntk | ❌ | ❌ | ❌ |
+        | Redmi K40| Alioth | 4.19 | Based-AOSP | 15 | AnyKernel3 | rsuntk | ✅ | ❌ | ❌ |
 
         - OnePlus 8 (CN) has been tested and can be used on the OnePlus 9R. Theoretically, it should also work on the OnePlus 8T/8Pro.
         - The Black Shark 4 cannot patch SuSFS due to a kernel defect (missing ANDROID_KABI). To enhance stealth and security, it is the first device to switch from the regular manual hook to [VFS Hook](https://github.com/backslashxx/KernelSU/issues/5).
@@ -126,8 +109,6 @@ jobs:
           git push --tags
 
           # Get KernelSU version
-          # git clone -b next-susfs https://github.com/KernelSU-Next/KernelSU-Next.git
-          # KSU_NEXT_VERSION=$(cd KernelSU-Next && expr $(/usr/bin/git rev-list --count HEAD) + 10200)
           git clone -b magic https://github.com/backslashxx/KernelSU.git KernelSU-Magic
           KSU_MAGIC_VERSION=$(cd KernelSU-Magic && expr $(/usr/bin/git rev-list --count HEAD) + 10200 - 32)
           git clone -b main https://github.com/rsuntk/KernelSU.git KernelSU-rsuntk
@@ -141,7 +122,6 @@ jobs:
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
           echo "$RELEASE_NOTES" >> $GITHUB_ENV
           # echo "[KernelSU-Next](https://github.com/KernelSU-Next/KernelSU-Next) Version: $KSU_NEXT_VERSION  " >> $GITHUB_ENV
-          echo "[KernelSU-Next](https://github.com/KernelSU-Next/KernelSU-Next) Not Supported ❌ !  " >> $GITHUB_ENV
           echo "[KernelSU-Magic](https://github.com/backslashxx/KernelSU) Version: $KSU_MAGIC_VERSION  " >> $GITHUB_ENV
           echo "[KernelSU-rsuntk](https://github.com/rsuntk/KernelSU) Version: $KSU_RSUNTK_VERSION  " >> $GITHUB_ENV
           echo "[KernelSU-lightsummer233](https://github.com/lightsummer233/KernelSU) Version: $KSU_LIGHTSUMMER233_VERSION  " >> $GITHUB_ENV
