--- a/Profiles/polaris_evox_a15.env
+++ b/Profiles/polaris_evox_a15.env
@@ -1,31 +1,33 @@
-CONFIG_ENV=Profiles/polaris_evox_a15.env
+CONFIG_ENV=Profiles/lineage_a14.env
 
-DEVICE_NAME=xiaomi_mix2s_cn
-DEVICE_CODENAME=polaris
+DEVICE_NAME=lineage
+DEVICE_CODENAME=lineage
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
 
-KERNEL_SOURCE=https://github.com/Evolution-X-Devices/kernel_xiaomi_sdm845.git
-KERNEL_BRANCH=vic
-CLANG_SOURCE=https://github.com/LineageOS/android_prebuilts_clang_kernel_linux-x86_clang-r416183b.git
-CLANG_BRANCH=lineage-20.0
 
-GCC_64_SOURCE=https://github.com/JackA1ltman/Google-GCC-Android-4.9.git
-GCC_64_BRANCH=aarch64
-GCC_32_SOURCE=https://github.com/JackA1ltman/Google-GCC-Android-4.9.git
-GCC_32_BRANCH=arm32
+KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_qcom_sm8250
+KERNEL_BRANCH=lineage-20
+CLANG_SOURCE=hhttps://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250322-release/Clang-21.0.0git-20250322.tar.gz
+CLANG_BRANCH=
+
+GCC_GNU=false
+GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git
+GCC_64_BRANCH=lineage-19.1
+GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git
+GCC_32_BRANCH=lineage-19.1
 
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=stock-polaris_defconfig
 
-KERNELSU_SOURCE=https://raw.githubusercontent.com/ShirkNeko/KernelSU/refs/heads/susfs-dev/kernel/setup.sh
-KERNELSU_BRANCH=susfs-dev
+KERNELSU_SOURCE=https://raw.githubusercontent.com/rsuntk/KernelSU/refs/heads/main/kernel/setup.sh
+KERNELSU_BRANCH=
 KERNELSU_NAME=KernelSU
 
-SUSFS_ENABLE=true
-SUSFS_FIXED=true
+SUSFS_ENABLE=false
+SUSFS_FIXED=false
 
-BOOT_SOURCE=https://github.com/JackA1ltman/Kernel_Extra/raw/refs/heads/main/Evox_Mix2s_A15/source_imgs/boot_evox_a15_mix2s.img
+BOOT_SOURCE=
 
-ROM_TEXT=evolution_x_android_15_official
+ROM_TEXT=lineage_official
