--- a/Profiles/lineage_a14.env
+++ b/Profiles/lineage_a14.env
@@ -9,7 +9,7 @@ EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-
 
 KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_qcom_sm8250
 KERNEL_BRANCH=lineage-20
-CLANG_SOURCE=hhttps://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250322-release/Clang-21.0.0git-20250322.tar.gz
+CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250322-release/Clang-21.0.0git-20250322.tar.gz
 CLANG_BRANCH=
 
 GCC_GNU=false
