--- a/Profiles/lineage_a14.env
+++ b/Profiles/lineage_a14.env
@@ -28,6 +28,6 @@ KERNELSU_NAME=KernelSU
 SUSFS_ENABLE=false
 SUSFS_FIXED=false
 
-BOOT_SOURCE=
+BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
 
 ROM_TEXT=lineage_official
