--- a/.github/workflows/aosp_a15.yml
+++ b/.github/workflows/aosp_a15.yml
@@ -6,9 +6,9 @@ env:
   PYTHON_VERSION: "3" # Only 2(Ubuntu 22.04) or 3(Any OS Versions).
   PACK_METHOD: "Anykernel3" # Anykernel3 need SOURCE and BRANCH, MKBOOTIMG needn't it.
   KERNELSU_METHOD: "shell" # shell, manual and only.
-  PATCHES_SOURCE: "sonako0122/NonGKI_Kernel_Build" # [your_name]/[your_patch] -> gooder123/NonGKI_Patcher
-  PATCHES_BRANCH: "op_kernel" # [your_branch] -> main
-  HOOK_METHOD: "vfs" # manual hook method,can choice vfs and normal.
+  # PATCHES_SOURCE: "JackA1ltman/NonGKI_Kernel_Patches" # [your_name]/[your_patch] -> gooder123/NonGKI_Patcher
+  # PATCHES_BRANCH: "op_kernel" # [your_branch] -> main
+  # HOOK_METHOD: "vfs" # manual hook method,can choice vfs and normal.
   PROFILE_NAME: "aosp_a15.env" # your profile name.
   KERNELSU_SUS_PATCH: "false" # if u need manual susfs patch to kernelsu.
   BUILD_DEBUGGER: "false" # Output build errors.
@@ -268,9 +268,6 @@ jobs:
           fi
           echo "PACK_METHOD=${{ env.PACK_METHOD }}" >> $GITHUB_ENV
 
-          wget https://raw.githubusercontent.com/JackA1ltman/NonGKI_Kernel_Patches/refs/heads/op_kernel/kona_oos/realking_op8_rm_next_and_backport.patch
-          rm -rf KernelSU-Next
-          patch -p1 < realking_op8_rm_next_and_backport.patch
           if [[ ${{ env.KERNELSU_METHOD }} == "shell" ]]; then
             curl -sSL ${{ env.KERNELSU_SOURCE }} | bash -s ${{ env.KERNELSU_BRANCH }}
           elif [[ ${{ env.KERNELSU_METHOD }} == "manual" ]]; then
