!Update aosp_a15.yml :Set Pack Method

--- a/.github/workflows/aosp_a15.yml
+++ b/.github/workflows/aosp_a15.yml
@@ -249,57 +249,50 @@ jobs:
           # Variable
           SUSFS_SOURCE=https://gitlab.com/simonpunk/susfs4ksu.git
           SUSFS_BRANCH=kernel-${{ env.KERNEL_VERSION }}
+          PACK_METHOD=Anykernel3 # Anykernel3 need SOURCE and BRANCH, MKBOOTIMG needn't it.
+          KERNELSU_METHOD=shell # shell and manual
 
-          # Set ${{ env.PACK_METHOD }} and KernelSU
-          if [[ ${{ env.PACK_METHOD }} == "Anykernel3" ]]; then
+          # Set $PACK_METHOD and KernelSU
+          if [[ $PACK_METHOD == "Anykernel3" ]]; then
             cd $GITHUB_WORKSPACE/device_kernel
-            if [[ -d "anykernel" ]]; then
+            if [[ -d "Anykernel3" ]]; then
               echo "Found Anykernel3 in Kernel!"
             else
               git clone ${{ env.AK3_SOURCE }} -b ${{ env.AK3_BRANCH }} Anykernel3 --depth=1
             fi
-          elif [[ ${{ env.PACK_METHOD }} == "MKBOOTIMG" ]]; then
+          elif [[ $PACK_METHOD == "MKBOOTIMG" ]]; then
             cd $GITHUB_WORKSPACE
             git clone https://android.googlesource.com/platform/system/tools/mkbootimg $GITHUB_WORKSPACE/mkboottools -b main-kernel-build-2024 --depth=1
             wget ${{ env.BOOT_SOURCE }} -O $GITHUB_WORKSPACE/boot_source_${{ env.DEVICE_NAME }}.img
             cd device_kernel
           else
-            false
+            exit
           fi
-          echo "PACK_METHOD=${{ env.PACK_METHOD }}" >> $GITHUB_ENV
+          echo "PACK_METHOD=$PACK_METHOD" >> $GITHUB_ENV
 
-          if [[ ${{ env.KERNELSU_METHOD }} == "shell" ]]; then
+          if [[ $KERNELSU_METHOD == "shell" ]]; then
             curl -sSL ${{ env.KERNELSU_SOURCE }} | bash -s ${{ env.KERNELSU_BRANCH }}
-          elif [[ ${{ env.KERNELSU_METHOD }} == "manual" ]]; then
+          elif [[ $KERNELSU_METHOD == "manual" ]]; then
             rm -rf KernelSU && rm -rf KernelSU-Next
             git clone ${{ env.KERNELSU_SOURCE }} -b ${{ env.KERNELSU_BRANCH }} ${{ env.KERNELSU_NAME }}
-            ln -sf "$(realpath --relative-to="$KERNEL_LOCATION/drivers" "$KERNEL_LOCATION/${{ env.KERNELSU_NAME }}/kernel")" "kernelsu"
+            ln -sf "$(realpath --relative-to="$KERNEL_LOCATION/drivers" "$KERNEL_LOCATION/KernelSU-Next/kernel")" "kernelsu"
             grep -q "kernelsu" "$KERNEL_LOCATION/drivers/Makefile" || printf "\nobj-\$(CONFIG_KSU) += kernelsu/\n" >> $KERNEL_LOCATION/drivers/Makefile
             grep -q "source \"drivers/kernelsu/Kconfig\"" "$KERNEL_LOCATION/drivers/Kconfig" || sed -i "/endmenu/i\source \"drivers/kernelsu/Kconfig\"" "$KERNEL_LOCATION/drivers/Kconfig"
             echo "KernelSU Settings done."
-          elif [[ ${{ env.KERNELSU_METHOD }} == "only" ]];then
-            rm -rf KernelSU && rm -rf KernelSU-Next
-            git clone ${{ env.KERNELSU_SOURCE }} -b ${{ env.KERNELSU_BRANCH }} ${{ env.KERNELSU_NAME }}
-            echo "KernelSU git done."
           else
-            false
+            exit
           fi
-          echo "KERNELSU_METHOD=${{ env.KERNELSU_METHOD }}" >> $GITHUB_ENV
+          echo "KERNELSU_METHOD=$KERNELSU_METHOD" >> $GITHUB_ENV
           KSU_VERSION=$(cd ${{ env.KERNELSU_NAME }} && expr $(/usr/bin/git rev-list --count HEAD) + 10200)
           echo "UPLOADNAME=-${{ env.KERNELSU_NAME }}_$KSU_VERSION" >> $GITHUB_ENV
 
           # Set SUSFS
           if [[ "${{ env.SUSFS_ENABLE }}" == true ]]; then
             if [[ "${{ env.SUSFS_FIXED }}" == true ]]; then
-              if [ -z "${{ env.PATCHES_SOURCE }}" ] || [ -z "${{ env.PATCHES_BRANCH }}" ]; then
-                echo "Please input vaild source and branch!"
-                false
-              elif [[ ${{ env.PATCHES_SOURCE }} == *".git" ]]; then
-                echo "Please do not set a full URL in PATCH_SOURCE!"
-                false
-              else
-                git clone https://github.com/${{ env.PATCHES_SOURCE }}.git -b ${{ env.PATCHES_BRANCH }} NonGKI_Kernel_Patches --depth=1 # It's not necessary.
-              fi
+              PATCHES_SOURCE=[your_name]/[your_patch]
+              PATCHES_BRANCH=[your_branch]
+              git clone https://github.com/$PATCHES_SOURCE.git -b $PATCHES_BRANCH NonGKI_Kernel_Patches --depth=1 # It's not necessary.
+              # git clone https://${{ github.actor }}:${{ secrets.SPECIAL_COMMAND }}@github.com/$PATCHES_SOURCE -b $PATCHES_BRANCH NonGKI_Kernel_Patches # if u need.
             fi
             git clone $SUSFS_SOURCE -b $SUSFS_BRANCH susfs4ksu --depth=1
             cp susfs4ksu/kernel_patches/fs/* fs/
@@ -307,12 +300,6 @@ jobs:
           else
             echo "Disabled SUSFS !"
           fi
-
-          # Remove Patch
-          git clone https://github.com/${{ env.PATCHES_SOURCE }}.git -b ${{ env.PATCHES_BRANCH }} NonGKI_Kernel_Patches --depth=1 # It's not necessary.
-          cp NonGKI_Kernel_Patches/kona_oos/realking_op8_rm_all_normal_patch.patch ./
-
-          patch -p1 < realking_op8_rm_all_normal_patch.patch || true
 
       - name: Patch Kernel for no-kprobe
         run: |
