--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -18,7 +18,7 @@ GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_a
 GCC_32_BRANCH=lineage-19.1
 
 DEFCONFIG_SOURCE=
-DEFCONFIG_NAME=alioth_defconfig
+DEFCONFIG_NAME=munch_defconfig
 
 KERNELSU_SOURCE=https://raw.githubusercontent.com/rsuntk/KernelSU/refs/heads/main/kernel/setup.sh
 KERNELSU_BRANCH=
@@ -32,7 +32,7 @@ AK3_BRANCH=master
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
 
-LXC_ENABLE=false
+LXC_ENABLE=true
 
 HAVE_NO_DTBO=false
 
