--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=Profiles/alioth_aosp_a15.env
 
-DEVICE_NAME=redmi_k40
-DEVICE_CODENAME=alioth
+DEVICE_NAME=redmi_k40s
+DEVICE_CODENAME=munch
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
