!Rs alioth original state

--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -1,14 +1,14 @@
 CONFIG_ENV=Profiles/alioth_aosp_a15.env
 
-DEVICE_NAME=redmi_k40s
-DEVICE_CODENAME=munch
+DEVICE_NAME=redmi_k40
+DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
+EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_magictime
 KERNEL_BRANCH=magictime-new
-CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250411-release/Clang-21.0.0git-20250411.tar.gz
+CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250418-release/Clang-21.0.0git-20250418.tar.gz
 CLANG_BRANCH=
 
 GCC_GNU=false
@@ -18,7 +18,7 @@ GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_a
 GCC_32_BRANCH=lineage-19.1
 
 DEFCONFIG_SOURCE=
-DEFCONFIG_NAME=munch_defconfig
+DEFCONFIG_NAME=alioth_defconfig
 
 KERNELSU_SOURCE=https://raw.githubusercontent.com/rsuntk/KernelSU/refs/heads/main/kernel/setup.sh
 KERNELSU_BRANCH=
@@ -32,7 +32,7 @@ AK3_BRANCH=master
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
 
-LXC_ENABLE=true
+LXC_ENABLE=false
 
 HAVE_NO_DTBO=false
 
