--- a/Profiles/aosp_a15.env
+++ b/Profiles/aosp_a15.env
@@ -4,11 +4,11 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip
+EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_sm8250_fake
 KERNEL_BRANCH=main
-CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.0/LLVM-19.1.0-Linux-X64.tar.xz
+CLANG_SOURCE=hhttps://github.com/llvm/llvm-project/releases/download/llvmorg-18.1.7/clang+llvm-18.1.7-x86_64-linux-gnu-ubuntu-18.04.tar.xz
 CLANG_BRANCH=
 
 GCC_GNU=true
