--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -21,7 +21,7 @@ DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
 
 KERNELSU_SOURCE=https://raw.githubusercontent.com/ShirkNeko/KernelSU/main/kernel/setup.sh
-KERNELSU_BRANCH=
+KERNELSU_BRANCH=dev
 KERNELSU_NAME=KernelSU
 
 SUSFS_ENABLE=false
