--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -20,8 +20,8 @@ GCC_32_BRANCH=lineage-19.1
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
 
-KERNELSU_SOURCE=https://raw.githubusercontent.com/ShirkNeko/KernelSU/main/kernel/setup.sh
-KERNELSU_BRANCH=dev
+KERNELSU_SOURCE=https://raw.githubusercontent.com/5ec1cff/KernelSU/main/kernel/setup.sh
+KERNELSU_BRANCH=
 KERNELSU_NAME=KernelSU
 
 SUSFS_ENABLE=false
