--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -11,11 +11,11 @@ KERNEL_BRANCH=magictime-new
 CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250430-release/Clang-21.0.0git-20250430.tar.gz
 CLANG_BRANCH=
 
-GCC_GNU=false
-GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git
-GCC_64_BRANCH=lineage-19.1
-GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git
-GCC_32_BRANCH=lineage-19.1
+GCC_GNU=true
+GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-gnu-9.3.git
+GCC_64_BRANCH=lineage-22.2
+GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-gnu-9.3.git
+GCC_32_BRANCH=lineage-22.2
 
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
