--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -6,16 +6,16 @@ DEVICE_CODENAME=alioth
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
-KERNEL_SOURCE=https://github.com/TIMISONG-dev/kernel_xiaomi_sm8250
+KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_magictime.git
 KERNEL_BRANCH=magictime-new
 CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250430-release/Clang-21.0.0git-20250430.tar.gz
 CLANG_BRANCH=
 
-GCC_GNU=true
-GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-gnu-9.3.git
-GCC_64_BRANCH=lineage-22.2
-GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-gnu-9.3.git
-GCC_32_BRANCH=lineage-22.2
+GCC_GNU=false
+GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git
+GCC_64_BRANCH=lineage-19.1
+GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git
+GCC_32_BRANCH=lineage-19.1
 
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
