--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -12,10 +12,10 @@ CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-2025
 CLANG_BRANCH=
 
 GCC_GNU=false
-GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git
-GCC_64_BRANCH=lineage-19.1
-GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git
-GCC_32_BRANCH=lineage-19.1
+GCC_64_SOURCE=
+GCC_64_BRANCH=
+GCC_32_SOURCE=
+GCC_32_BRANCH=
 
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
