--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -8,7 +8,7 @@ EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_magictime.git
 KERNEL_BRANCH=magictime-new
-CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250430-release/Clang-21.0.0git-20250430.tar.gz
+CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250501-release/Clang-21.0.0git-20250501.tar.gz
 CLANG_BRANCH=
 
 GCC_GNU=false
@@ -20,9 +20,9 @@ GCC_32_BRANCH=lineage-19.1
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
 
-KERNELSU_SOURCE=
+KERNELSU_SOURCE=https://raw.githubusercontent.com/rsuntk/KernelSU/refs/heads/main/kernel/setup.sh
 KERNELSU_BRANCH=
-KERNELSU_NAME=
+KERNELSU_NAME=KernelSU
 
 SUSFS_ENABLE=false
 SUSFS_FIXED=false
