--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -6,8 +6,8 @@ DEVICE_CODENAME=alioth
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
 
-KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_mod
-KERNEL_BRANCH=lineage22-mod
+KERNEL_SOURCE=https://github.com/Ryobunoki/kernel_xiaomi_sm8250_mod.git
+KERNEL_BRANCH=android14-lineage22-mod
 CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250501-release/Clang-21.0.0git-20250501.tar.gz
 CLANG_BRANCH=
 
@@ -20,8 +20,8 @@ GCC_32_BRANCH=lineage-19.1
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
 
-KERNELSU_SOURCE=https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh
-KERNELSU_BRANCH=
+KERNELSU_SOURCE=https://raw.githubusercontent.com/ShirkNeko/SukiSU-Ultra/main/kernel/setup.sh
+KERNELSU_BRANCH=susfs-dev
 KERNELSU_NAME=KernelSU
 
 SUSFS_ENABLE=false
