--- a/Profiles/aosp_a15.env
+++ b/Profiles/aosp_a15.env
@@ -5,6 +5,7 @@ DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip LLVM=1 LLVM_IAS=1 V=$VERBOSE
+LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_sm8250_fake
 KERNEL_BRANCH=main
