--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -4,7 +4,7 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
+EXTRA_CMDS:LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/ShirkNeko/kernel_xiaomi_sm8250_mod
 KERNEL_BRANCH=android14-lineage22-mod
@@ -24,8 +24,8 @@ KERNELSU_SOURCE=https://raw.githubusercontent.com/ShirkNeko/SukiSU-Ultra/main/ke
 KERNELSU_BRANCH=susfs-dev
 KERNELSU_NAME=KernelSU
 
-SUSFS_ENABLE=false
-SUSFS_FIXED=false
+SUSFS_ENABLE=true
+SUSFS_FIXED=true
 
 AK3_SOURCE=https://github.com/osm0sis/AnyKernel3.git
 AK3_BRANCH=master
