--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -4,7 +4,7 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:LLVM=1 LLVM_IAS=1 V=$VERBOSE
+EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/ShirkNeko/kernel_xiaomi_sm8250_mod
 KERNEL_BRANCH=android14-lineage22-mod
@@ -25,7 +25,7 @@ KERNELSU_BRANCH=susfs-dev
 KERNELSU_NAME=KernelSU
 
 SUSFS_ENABLE=true
-SUSFS_FIXED=true
+SUSFS_FIXED=false
 
 AK3_SOURCE=https://github.com/osm0sis/AnyKernel3.git
 AK3_BRANCH=master
