--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -6,8 +6,8 @@ DEVICE_CODENAME=alioth
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
-KERNEL_SOURCE=https://github.com/ShirkNeko/kernel_xiaomi_sm8250_mod
-KERNEL_BRANCH=android14-lineage22-mod
+KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_mod.git
+KERNEL_BRANCH=lineage22-mod
 CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-Linux-X64.tar.xz
 CLANG_BRANCH=
 
