--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -28,7 +28,7 @@ SUSFS_ENABLE=true
 SUSFS_FIXED=false
 
 AK3_SOURCE=https://github.com/sonako0122/AnyKernel3
-AK3_BRANCH=main
+AK3_BRANCH=master
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
 
