--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -20,14 +20,14 @@ GCC_32_BRANCH=lineage-19.1
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=alioth_defconfig
 
-KERNELSU_SOURCE=https://raw.githubusercontent.com/ShirkNeko/SukiSU-Ultra/main/kernel/setup.sh
-KERNELSU_BRANCH=susfs-dev
+KERNELSU_SOURCE=https://raw.githubusercontent.com/rsuntk/KernelSU/refs/heads/main/kernel/setup.sh
+KERNELSU_BRANCH=
 KERNELSU_NAME=KernelSU
 
-SUSFS_ENABLE=true
+SUSFS_ENABLE=false
 SUSFS_FIXED=false
 
-AK3_SOURCE=https://github.com/osm0sis/AnyKernel3.git
+AK3_SOURCE=https://github.com/sonako0122/AnyKernel3.git
 AK3_BRANCH=master
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
