--- a/Profiles/alioth_fake_a15.env
+++ b/Profiles/alioth_fake_a15.env
@@ -7,7 +7,7 @@ CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_sm8250.git
-KERNEL_BRANCH=non-ksu
+KERNEL_BRANCH=no-ksu
 CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-Linux-X64.tar.xz
 CLANG_BRANCH=
 
