--- a/Profiles/alioth_fake_a15.env
+++ b/Profiles/alioth_fake_a15.env
@@ -12,10 +12,10 @@ CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1
 CLANG_BRANCH=
 
 GCC_GNU=false
-GCC_64_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git
-GCC_64_BRANCH=lineage-19.1
-GCC_32_SOURCE=https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git
-GCC_32_BRANCH=lineage-19.1
+GCC_64_SOURCE=
+GCC_64_BRANCH=
+GCC_32_SOURCE=
+GCC_32_BRANCH=
 
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=vendor/alioth_defconfig
