--- a/Profiles/alioth_fake_a15.env
+++ b/Profiles/alioth_fake_a15.env
@@ -4,7 +4,7 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE
+EXTRA_CMDS: LLVM=1 LLVM_IAS=1
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_sm8250.git
 KERNEL_BRANCH=no-ksu
