--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -27,7 +27,7 @@ KERNELSU_NAME=KernelSU
 SUSFS_ENABLE=false
 SUSFS_FIXED=false
 
-AK3_SOURCE=https://github.com/sonako0122/AnyKernel3.git
+AK3_SOURCE=https://github.com/osm0sis/AnyKernel3.git
 AK3_BRANCH=master
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
