--- a/Profiles/alioth_fake_a15.env
+++ b/Profiles/alioth_fake_a15.env
@@ -6,9 +6,9 @@ DEVICE_CODENAME=alioth
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS: LLVM=1 LLVM_IAS=1 CROSS_COMPILE=aarch64-linux-android- CROSS_COMPILE_ARM32=arm-linux-androideabi-
 
-KERNEL_SOURCE=https://github.com/sonako0122/kernel_sm8250.git
-KERNEL_BRANCH=no-ksu
-CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/18.0.0git-20240124-release/Clang-18.0.0git-20240124.tar.gz
+KERNEL_SOURCE=https://github.com/sonako0122/xiaomi_sm8250_kernel_e404
+KERNEL_BRANCH=main-new
+CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-Linux-X64.tar.xz
 CLANG_BRANCH=
 
 GCC_64_SOURCE=
