--- a/Profiles/alioth_fake_a15.env
+++ b/Profiles/alioth_fake_a15.env
@@ -4,7 +4,9 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS: LLVM=1 LLVM_IAS=1 CROSS_COMPILE=aarch64-linux-android- CROSS_COMPILE_ARM32=arm-linux-androideabi-
+EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE  
+CROSS_COMPILE=aarch64-linux-android- 
+CROSS_COMPILE_ARM32=arm-linux-androideabi-
 
 KERNEL_SOURCE=https://github.com/sonako0122/xiaomi_sm8250_kernel_e404
 KERNEL_BRANCH=main-new
