Update and rename build_kernel_alioth_fake_a15.yml to build_kernel_alioth_n0_a15.yml

--- a/.github/workflows/build_kernel_alioth_n0_a15.yml
+++ b/.github/workflows/build_kernel_alioth_n0_a15.yml
@@ -1,4 +1,4 @@
-name: Build Kernel Redmi K40 sonako_fake with KSU
+name: Build Kernel Redmi K40 sonako_n0 with KSU
 on:
   workflow_call:
   workflow_dispatch:
