--- a/Profiles/alioth_n0_a15.env
+++ b/Profiles/alioth_n0_a15.env
@@ -5,11 +5,9 @@ DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE  
-CROSS_COMPILE=aarch64-linux-android- 
-CROSS_COMPILE_ARM32=arm-linux-androideabi-
 
 KERNEL_SOURCE=https://github.com/sonako0122/xiaomi_sm8250_kernel_e404
-KERNEL_BRANCH=main-new
+KERNEL_BRANCH=main
 CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-Linux-X64.tar.xz
 CLANG_BRANCH=
 
@@ -28,8 +26,8 @@ KERNELSU_NAME=KernelSU
 SUSFS_ENABLE=false
 SUSFS_FIXED=false
 
-AK3_SOURCE=https://github.com/osm0sis/AnyKernel3.git
-AK3_BRANCH=master
+AK3_SOURCE=https://github.com/kvsnr113/AnyKernel3
+AK3_BRANCH=main
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
 
