--- a/Profiles/alioth_n0_a15.env
+++ b/Profiles/alioth_n0_a15.env
@@ -4,7 +4,7 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS: LLVM=1 LLVM_IAS=1 V=$VERBOSE  
+EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip 
 
 KERNEL_SOURCE=https://github.com/sonako0122/xiaomi_sm8250_kernel_e404
 KERNEL_BRANCH=main
@@ -35,4 +35,4 @@ LXC_ENABLE=false
 
 HAVE_NO_DTBO=false
 
-ROM_TEXT=fakedreamer
+ROM_TEXT=sonako
