--- a/Profiles/alioth_n0_a15.env
+++ b/Profiles/alioth_n0_a15.env
@@ -11,10 +11,11 @@ KERNEL_BRANCH=main
 CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-Linux-X64.tar.xz
 CLANG_BRANCH=
 
-GCC_64_SOURCE=
-GCC_64_BRANCH=
-GCC_32_SOURCE=
-GCC_32_BRANCH=
+GCC_GNU=false
+GCC_64_SOURCE=https://github.com/JackA1ltman/Google-GCC-Android-4.9.git
+GCC_64_BRANCH=aarch64
+GCC_32_SOURCE=https://github.com/JackA1ltman/Google-GCC-Android-4.9.git
+GCC_32_BRANCH=arm32
 
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=vendor/alioth_defconfig
