--- a/.github/workflows/build_kernel_arch_n0_kerenl.yml
+++ b/.github/workflows/build_kernel_arch_n0_kerenl.yml
@@ -1,4 +1,4 @@
-name: Build Kernel Arch K40 n0-kernel with KSU
+name: Build Kernel Arch K40 with KSU
 on:
   workflow_call:
   workflow_dispatch:
@@ -10,7 +10,7 @@ env:
   PATCHES_BRANCH: "branch" # [your_branch] -> main
   HOOK_METHOD: "normal" # manual hook method,can choice syscall and normal.
   HOOK_OLDER: "false" # contain backport older patch and syscall older patch.
-  PROFILE_NAME: "alioth_n0_a15.env" # your profile name.
+  PROFILE_NAME: "alioth_aosp_a15.env" # your profile name.
   KERNELSU_SUS_PATCH: "false" # if u need manual susfs patch to kernelsu.
   GENERATE_DTB: "false" # if u kernel need DTB , but cannot auto generate it. (Only Anykernel3).
   GENERATE_CHIP: "qcom" # only supported for qcom and mediatek.
