--- a/.github/workflows/build_kernel_arch_n0_kerenl.yml
+++ b/.github/workflows/build_kernel_arch_n0_kerenl.yml
@@ -79,7 +79,7 @@ jobs:
           cat /etc/os-release
 
           pacman -Syyu --noconfirm
-          pacman -S git base-devel systemd patch ccache automake flex lzop bison gperf zip curl bzip2 squashfs-tools pngcrush schedtool make optipng maven pwgen minicom bc unzip 7zip zstd binutils gcc python3 wget which --noconfirm
+          pacman -S git base-devel systemd patch ccache automake flex lzop bison gperf zip curl bzip2 squashfs-tools pngcrush schedtool make optipng maven pwgen minicom bc unzip 7zip zstd binutils gcc python3 wget which libxml2 --noconfirm
 
       - name: Install GNU GCC
         if: env.GCC_GNU == 'true'
