--- a/Profiles/alioth_n0_a15.env
+++ b/Profiles/alioth_n0_a15.env
@@ -4,7 +4,7 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:CLANG_TRIPLE=aarch64-linux-gnu- AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip
+EXTRA_CMDS:LD=ld.lld CLANG_TRIPLE=aarch64-linux-gnu- AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip
 
 KERNEL_SOURCE=https://github.com/sonako0122/xiaomi_sm8250_kernel_e404
 KERNEL_BRANCH=main
