--- a/Profiles/alioth_aosp_a15.env
+++ b/Profiles/alioth_aosp_a15.env
@@ -4,11 +4,11 @@ DEVICE_NAME=redmi_k40
 DEVICE_CODENAME=alioth
 
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:LLVM=1 LLVM_IAS=1 V=$VERBOSE
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_magictime.git
 KERNEL_BRANCH=magictime-new
-CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-20.1.7/LLVM-20.1.7-Linux-X64.tar.xz
+CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20241222-release/Clang-20.0.0git-20241222.tar.gz
 CLANG_BRANCH=
 
 GCC_GNU=false
