--- a/Profiles/alioth_n0_a15.env
+++ b/Profiles/alioth_n0_a15.env
@@ -6,8 +6,8 @@ DEVICE_CODENAME=alioth
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip V=$VERBOSE
 
-KERNEL_SOURCE=https://github.com/sonako0122/xiaomi_sm8250_kernel_e404
-KERNEL_BRANCH=main
+KERNEL_SOURCE=https://github.com/re-noroi/kernel_sm8250.git
+KERNEL_BRANCH=stable
 CLANG_SOURCE=https://android.googlesource.com/toolchain/llvm-project/+/b718bcaf8c198c82f3021447d943401e3ab5bd54
 CLANG_BRANCH=
 
@@ -27,7 +27,7 @@ KERNELSU_NAME=KernelSU
 SUSFS_ENABLE=false
 SUSFS_FIXED=false
 
-AK3_SOURCE=https://github.com/kvsnr113/AnyKernel3
+AK3_SOURCE=https://github.com/re-noroi/anykernel3-test
 AK3_BRANCH=main
 
 BOOT_SOURCE=https://github.com/boot_author/android_kernel_codename/raw/refs/heads/main/rom/source_imgs/boot.img
