--- a/.github/workflows/build_kernel_alioth_n0_a15.yml
+++ b/.github/workflows/build_kernel_alioth_n0_a15.yml
@@ -481,7 +481,7 @@ jobs:
             echo "Doesn't found DTB! Your device maybe needn't the file."
           fi
 
-          cp -rp ./Anykernel3/* tmp
+          cp -rp ./anykernel3-test/* tmp
           cd tmp
           7za a -mx9 tmp.zip *
           cd ..
