--- a/Profiles/alioth_n0_a15.env
+++ b/Profiles/alioth_n0_a15.env
@@ -8,7 +8,7 @@ EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1 HOSTCC=gcc AS=llvm-as AR=llvm-ar NM=llvm-
 
 KERNEL_SOURCE=https://github.com/re-noroi/kernel_sm8250.git
 KERNEL_BRANCH=stable
-CLANG_SOURCE=https://android.googlesource.com/toolchain/llvm-project/+/b718bcaf8c198c82f3021447d943401e3ab5bd54
+CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20241222-release/Clang-20.0.0git-20241222.tar.gz
 CLANG_BRANCH=
 
 GCC_GNU=false
