--- a/Profiles/alioth_n0_a15.env
+++ b/Profiles/alioth_n0_a15.env
@@ -12,10 +12,10 @@ CLANG_SOURCE=https://android.googlesource.com/toolchain/llvm-project/+archive/b7
 CLANG_BRANCH=
 
 GCC_GNU=false
-GCC_64_SOURCE=https://github.com/JackA1ltman/Google-GCC-Android-4.9.git
-GCC_64_BRANCH=aarch64
-GCC_32_SOURCE=https://github.com/JackA1ltman/Google-GCC-Android-4.9.git
-GCC_32_BRANCH=arm32
+GCC_64_SOURCE=
+GCC_64_BRANCH=
+GCC_32_SOURCE=
+GCC_32_BRANCH=
 
 DEFCONFIG_SOURCE=
 DEFCONFIG_NAME=vendor/alioth_defconfig
