--- a/Profiles/alioth_los_a15.env
+++ b/Profiles/alioth_los_a15.env
@@ -8,7 +8,7 @@ EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip LLVM=1 LLVM_IAS=1 V=
 
 KERNEL_SOURCE=https://github.com/sonako0122/kernel_xiaomi_sm8250_mod.git
 KERNEL_BRANCH=lineage22-mod
-CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/21.0.0git-20250713-release/Clang-21.0.0git-20250713.tar.gz
+CLANG_SOURCE=https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-Linux-X64.tar.xz
 CLANG_BRANCH=
 
 GCC_GNU=false
